[workspace]
resolver = "3"
members = [
    "crates/quake-audio",
    "crates/quake-console",
    "crates/quake-input",
    "crates/quake-network",
    "crates/quake-render",
    "crates/quake-resources", "crates/quake-traits",
    "crates/quake-window",
    "quake-client",
    "quake-server"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.51", features = ["derive"] }
glam = "0.30.9"
pollster = "0.4.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
