[package]
name = "quake-server"

version.workspace = true
edition.workspace = true

[dependencies]
quake-console = { path = "../crates/quake-console" }
quake-network = { path = "../crates/quake-network" }
quake-resources = { path = "../crates/quake-resources" }

anyhow.workspace = true
clap.workspace = true
rustls.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

daemonize = "0.5.0"
