[package]
name = "quake-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
quake-asset = { path = "../crates/quake-asset" }
quake-network = { path = "../crates/quake-network" }
quake-world = { path = "../crates/quake-world" }

anyhow.workspace = true
tokio = "1.49.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.54", features = ["derive"] }
