[package]
name = "quake-app"
version = "0.1.0"
edition = "2024"

[dependencies]
quake-console = { path = "../quake-console" }
quake-input = { path = "../quake-input" }
quake-resource = { path = "../quake-resource" }
quake-renderer = { path = "../quake-renderer" }
quake-window = { path = "../quake-window" }

anyhow = "1.0.100"
