[package]
name = "quake-app"
version = "0.1.0"
edition = "2024"

[dependencies]
quake-console = { path = "../quake-console" }
quake-input = { path = "../quake-input" }
quake-resource = { path = "../quake-resource" }
quake-renderer = { path = "../quake-renderer" }
quake-window = { path = "../quake-window" }

anyhow.workspace = true
pollster.workspace = true
tracing.workspace = true
wgpu.workspace = true

tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
