[package]
name = "quake-asset"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
glam.workspace = true

itertools = "0.14.0"
glob = "0.3.3"
byteorder = "1.5.0"
nom = "8.0.0"
num-traits = "0.2.19"
bitflags = "2.10.0"
num-derive = "0.4.2"
tracing = "0.1.44"
