[package]
name = "quake-console"
edition = "2024"

version.workspace = true

[dependencies]
quake-resources = { path = "../quake-resources" }
quake-traits = { path = "../quake-traits" }

anyhow.workspace = true
async-trait.workspace = true
pollster.workspace = true

rustyline = { version = "17.0.2", features = ["derive"] }
multimap = "0.10.1"
