[package]
name = "quake-console"

version.workspace = true
edition.workspace = true

[dependencies]
quake-resources = { path = "../quake-resources" }
quake-traits = { path = "../quake-traits" }

anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true

rustyline = { version = "17.0.2", features = ["derive"] }
multimap = "0.10.1"
