[package]
name = "quake-network"

version.workspace = true
edition.workspace = true

[dependencies]
quake-console = { path = "../quake-console" }
quake-entity = { path = "../quake-entity" }
quake-traits = { path = "../quake-traits" }

anyhow.workspace = true
async-trait.workspace = true
rustls.workspace = true
tokio.workspace = true
tracing.workspace = true

quinn = { version = "0.11.9", features = ["ring"] }
rustls-pemfile = "2.2.0"
dashmap = "7.0.0-rc2"
