[package]
name = "quake-network"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.100"
quinn = "0.11.9"
tokio = { version = "1.49.0", features = ["full"] }
serde = "1.0.228"
postcard = { version = "1.1.3", features = ["alloc"] }
tracing = "0.1.44"
dashmap = "7.0.0-rc2"
rustls-pemfile = "2.2.0"
bytes = "1.11.0"
log = "0.4.29"
