[package]
name = "quake-resources"
version = "0.1.0"
edition = "2024"

[dependencies]
quake-traits = { path = "../quake-traits" }

anyhow.workspace = true
glam.workspace = true

byteorder = "1.5.0"
bitflags = "2.10.0"
nom = "8.0.0"
slotmap = "1.0.7"
itertools = "0.14.0"
glob = "0.3.3"
async-trait = "0.1.89"
