[package]
name = "quake-resources"
edition = "2024"

version.workspace = true

[dependencies]
quake-traits = { path = "../quake-traits" }

anyhow.workspace = true
async-trait.workspace = true
glam.workspace = true

byteorder = "1.5.0"
bitflags = "2.10.0"
nom = "8.0.0"
slotmap = "1.0.7"
itertools = "0.14.0"
glob = "0.3.3"
